@@ -374,6 +374,7 @@ function_entry basic_functions[] = {
 	PHP_FE(str_word_count,														NULL)
 	PHP_FE(str_split,														NULL)
 	PHP_FE(strpbrk,															NULL)
+	PHP_FE(substr_compare,														NULL)
 
 #ifdef HAVE_STRCOLL
 	PHP_FE(strcoll,															NULL)
